2002-10-05  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-icon-container.c:
	(nautilus_icon_container_class_init): Install gtk style properties
	for the light/dark info colors, selection box color/alpha, and
	highlight color/alpha.
	(start_rubberbanding): Take the selection box color/alpha from the
	gtk theme instead of the nautilus theme.
	(setup_label_gcs): Take the light/dark info color from the gtk
	theme.
	(nautilus_icon_container_theme_changed): Take the highlight
	color/alpha from the gtk theme, and don't use the nautilus
	theme to find the text selection frame image (this wasn't 
	being themed anyway).

2002-10-05  Dave Camp  <dave@ximian.com>

	* icons/crux_eggplant/crux_eggplant.xml:
	* icons/crux_teal/crux_teal.xml:
	* icons/default/default.xml:
	* icons/gnome/gnome.xml:
	* icons/sierra/sierra.xml:
	* icons/tahoe/tahoe.xml:  Remove unused theme elements.
	* configure.in:
	* icons/crux_eggplant/Makefile.am:
	* icons/crux_teal/Makefile.am:
	* icons/default/Makefile.am:
	* icons/gnome/Makefile.am:
	* icons/sierra/Makefile.am:
	* icons/tahoe/Makefile.am: Remove unused icons and backgrounds
	from the build.
	* libnautilus-private/nautilus-theme.c: (has_theme_xml),
	(theme_get_themes_for_location): Check for the existence of
	theme.xml rather than an i-directory image.

2002-10-05  Dave Camp  <dave@ximian.com>
	
	* libnautilus-private/nautilus-directory-background.c:
	(initialize_background_from_settings),
	(nautilus_file_background_get_default_settings): Don't read
	settings from the nautilus theme.  Return the globally configured
	background if it is set, otherwise return empty settings (in which
	case the EelBackground will use colors from the gtk theme).
	(nautilus_file_background_read_desktop_settings):
	(nautilus_file_background_write_desktop_settings): Don't read
	defaults from the theme.
	(nautilus_file_background_write_desktop_default_settings): Just
	unset the desktop gconf keys.
	(nautilus_file_background_is_set),