@@ -1,10 +1,5 @@
 <?xml version="1.0"?>
-<theme _name="Crux-Eggplant" _description="An Eggplant variation of the Crux theme.">
-  <directory dark_info_color="0x777777"
-  	     light_info_color="0xAAAAAA"
-  	     selection_box_color_rgba="0x71577440"
-  	     selection_box_color="#715774"/>
-  			
+<theme _name="Crux-Eggplant" _description="An Eggplant variation of the Crux theme.">  			
   <sidebar sidebar_background_color="#886F8D-#250C2A%90-#000000:h"
            sidebar_background_tile_image="patterns/.striated.png"
            combine="true"/>
