@@ -1,11 +1,5 @@
 <?xml version="1.0"?>
 <theme _name="Crux-Teal" _description="A Teal variation of the Crux theme.">
-  <directory dark_info_color="0x777777"
-             light_info_color="0xAAAAAA"
-             selection_box_color_rgba="0x497B7E40"
-             selection_box_color="#497B7E"
-             highlight_color_rgba="0xAA497B7E"/>
-
   <sidebar sidebar_background_color="#669999-#003333%90-#000000:h"
            sidebar_background_tile_image="patterns/.striated.png"
 	   combine="true"/>
