@@ -6,15 +6,7 @@
            sidebar_background_color="#474A7C-#22233A:h"
 	   combine="true"/>
 
- <directory selection_box_color_rgba="0x727D974C"
-            selection_box_color="#727D97"/>
-
- <icon highlight_background_color="#000000"
-       highlight_text_color="#FFFFFF"
-       text_fill_color="#FFFFFF"/>
-  
  <thumbnails frame_offsets="3,3,6,6"/>
  <throbber frame_count="30" url="http://www.gnome.org/projects/nautilus/" delay="75"/>
- <zoom_control number_v_offset="-6" number_v_2_offset="-1" number_h_offset="-2"/>
- 
+ <zoom_control number_v_offset="-6" number_v_2_offset="-1" number_h_offset="-2"/> 
 </theme>
