@@ -3,7 +3,6 @@
 <theme _name="GNOME" _description="A theme designed to fit well with the classic GNOME environment."> 
 
   <thumbnails frame_offsets="3,3,6,6"/>
-  <toolbar icon_theme="standard"/>
   <throbber frame_count="6" url="http://www.gnome.org"/>
   <zoom_control number_v_offset="0" number_v_2_offset="-1" number_h_offset="-2"/>
 
