@@ -1,6 +1,5 @@
 <?xml version="1.0"?>
 <theme _name="Sierra" _description="Uses manila folders and gray-green backgrounds.">
   <sidebar sidebar_background_tile_image="./green_weave.png" sidebar_background_color="#FFFFFF"/>
-  <directory selection_box_color_rgba="0x70818359" selection_box_color="#708183"/>
   <zoom_control number_v_offset="-6" number_v_2_offset="-1" number_h_offset="-2"/>
 </theme>
