@@ -1,5 +1,13 @@
 2002-10-05  Dave Camp  <dave@ximian.com>
 
+	* icons/crux_eggplant/crux_eggplant.xml:
+	* icons/crux_teal/crux_teal.xml:
+	* icons/default/default.xml:
+	* icons/gnome/gnome.xml:
+	* icons/sierra/sierra.xml: Removed newly obsoleted theme elements.
+
+2002-10-05  Dave Camp  <dave@ximian.com>
+
 	* libnautilus-private/nautilus-icon-container.c:
 	(nautilus_icon_container_class_init): Install gtk style properties
 	for the light/dark info colors, selection box color/alpha, and
